Fixed long press on controller buttons on mobile, fixed js file.

--- a/EDAY2023/edaymobile.css
+++ b/EDAY2023/edaymobile.css
@@ -105,20 +105,11 @@ img#car-icon {
 	box-shadow: 1px 5px 20px rgba(76,175,80,0.75);
 }
 
-
 .arrow {
-	max-width: 100%;
-	max-height: 100%;
-	cursor: pointer;
-
-
-	filter: invert(72%) sepia(54%) saturate(2853%) hue-rotate(156deg) brightness(85%) contrast(77%);
+	font-size: 150px;
+	color: #34add0;
 }
 
-
-.flip {
-	transform: rotate(180deg);
-}
 
 .controller-button {
 	background-color: snow;
@@ -141,6 +132,7 @@ img#car-icon {
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+	-webkit-tap-highlight-color: transparent;
 }
 
 .no-long-touch {
@@ -150,4 +142,11 @@ img#car-icon {
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+	-webkit-tap-highlight-color: transparent;
+}
+
+@media only screen and (max-width: 600px) {
+	.arrow {
+
+	}
 }
